# feigenbaum

./: .pre-commit-config.yaml  LICENSE  README.rst  requirements-dev.txt  setup.cfg  tox.ini
src/feigenbaum/: generation.py
tests/: test_foo.py  test_generation.py
