[bdist_wheel]
universal=1

[metadata]
name = feigenbaum
version = attr: feigenbaum.__version__
license = MIT
licence_file = LICENSE
description = Feigenbaum chart generator
long_description = file: README.rst
author = Max Simmons
author_email = max@mxsmns.net
url = "https://github.com/mxsmns/feigenbaum"
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Education
    Topic :: Artistic Software
    Topic :: Education
    Typing :: Typed
    Natural Language :: English

[options]
package_dir=
    =src
packages = find:

[options.packages.find]
where = src

install_requires=
    matplotlib

[flake8]
extend-exclude = .venv,venv
max-line-length = 88

[mypy]
files = src/**/*.py tests/**/*.py
exclude = setup.py
check_untyped_defs = True
disallow_untyped_defs = True
disallow_any_generics = True
no_implicit_optional = True
warn_unused_ignores = True

[mypy-tests.*]
allow_untyped_defs = True

[coverage:run]
branch = True
source = src
